<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/rlUpload"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/drawable_dash">

        <RelativeLayout
            android:id="@+id/rlNewMedia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/ivAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/add" />

            <TextView
                android:id="@+id/tvUploadNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivAdd"
                android:layout_marginTop="10dp"
                android:text="@string/uploadNewMedia"
                android:textColor="@color/gray"
                android:textSize="18sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvUploadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:text="@string/uploadImage"
            android:textColor="@color/appColor"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUploadVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/uploadVideo"
            android:textColor="@color/appColor"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivUploadNewPic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <VideoView
            android:id="@+id/viewVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:visibility="gone" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvUpload"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/drawable_button_with_shadow"
        android:gravity="center"
        android:text="@string/upload"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>